feat: Add support for if/else